--- a/_config.yml
+++ b/_config.yml
@@ -26,8 +26,8 @@ author:
   email            : "wanghw26@mail.sysu.edu.cn" 
 
   # Academic websites
-  googlescholar    : "https://scholar.google.com/citations?user=PS_CX0AAAAAJ"
-  orcid            : "http://orcid.org/yourorcidurl"
+  googlescholar    : "https://scholar.google.com/citations?user=zrX4TcQAAAAJ&hl=en"
+  orcid            : # URL
   researchgate     : # URL
 
 
