--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,7 @@ author:
   # Academic websites
   googlescholar    : "https://scholar.google.com/citations?user=zrX4TcQAAAAJ&hl=en"
   orcid            : # URL
-  researchgate     : # URL
+  researchgate     : "https://www.researchgate.net/profile/Hongwei_Wang18"
 
 
 
