--- a/_config.yml
+++ b/_config.yml
@@ -167,7 +167,7 @@ collections:
     output: true
     permalink: /:collection/:path/
   talks:
-    output: false
+    output: true
     permalink: /:collection/:path/
 
 
@@ -219,13 +219,13 @@ defaults:
       share: true
       comment: true
   # _talks
-  - scope:
-      path: ""
-      type: talks
-    values:
-      layout: talk
-      author_profile: true
-      share: true
+     #  - scope:
+     #  path: ""
+     #  type: talks
+     # values:
+     #  layout: talk
+     #  author_profile: true
+     #  share: true
 
 
 # Sass/SCSS
