--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,7 +1,10 @@
 # main links links
 
 main:
-   - title: "CV"
+  - title: "Publications"
+    url: /articles/
+
+  - title: "CV"
     url: /cv/
     
 
