--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,6 +2,7 @@
 main:
   - title: "Publications"
     url: /publications/
-
   - title: "CV"
     url: /cv/
+  - title: "Opening"
+    url: /markdown/
