--- a/_config.yml
+++ b/_config.yml
@@ -18,8 +18,8 @@ url                      : "https://orfome.github.io/"
 author:
   # Biographic information
   avatar           : "hongweiwang.jpg"
-  name             : "Hongwei Wang"
-  bio              : "Associate Professor@SYSU-ZOC"
+  name             : "Hongwei Wang(王宏伟)"
+  bio              : "Bioinformatics"
   location         : "Guangzhou, China"
   employer         : "Sun Yat-Sen University"
 
