--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ author:
   # Biographic information
   avatar           : "hongweiwang.jpg"
   name             : "Hongwei Wang(王宏伟)"
-  bio              : "Bioinformatics"
+  bio              : "Associate Professor"
   location         : "Guangzhou, China"
   employer         : "Sun Yat-Sen University"
 
