--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ url                      : "https://orfome.github.io/"
 author:
   # Biographic information
   avatar           : "hongweiwang.jpg"
-  name             : "Hongwei Wang(王宏伟)"
+  name             : "Hongwei Wang"
   bio              : "Associate Professor"
   location         : "Guangzhou, China"
   employer         : "Sun Yat-Sen University"
