--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@
 # Basic Site Settings
 locale                   : "en-US"
 title                    : "Homepage"
-url                      : "https://orfome.github.io/"
+url                      : "https://wanghwlab.github.io"
 
 
 # Site Author - The following control what appear as part of the author content on the side bar.
