--- a/_config.yml
+++ b/_config.yml
@@ -21,13 +21,7 @@ author:
   name             : "Hongwei Wang"
   bio              : "Principal Investigator"
   location         : "Guangzhou, China"
-  employer         : "Sun Yat-Sen University"
-
-
-  # Academic websites
-  googlescholar    : "https://scholar.google.com/citations?user=zrX4TcQAAAAJ&hl=en"
-  orcid            : # URL
-  researchgate     : "https://www.researchgate.net/profile/Hongwei_Wang18"
+  employer         : "Zhongshan Ophthalmic Center @ Sun Yat-Sen University"
 
 
 
