--- a/_config.yml
+++ b/_config.yml
@@ -20,9 +20,8 @@ author:
   avatar           : "hongweiwang.jpg"
   name             : "Hongwei Wang"
   bio              : "Principal Investigator"
+  employer         : "SYSU@Zhongshan Ophthalmic Center"
   location         : "Guangzhou, China"
-  employer         : "Zhongshan Ophthalmic Center @ Sun Yat-Sen University"
-
 
 
 # Site Settings
