--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,8 @@ author:
   avatar           : "hongweiwang.jpg"
   name             : "Hongwei Wang"
   bio              : "Principal Investigator"
-  employer         : "SYSU@Zhongshan Ophthalmic Center"
+  employer         : "Zhongshan Ophthalmic Center"
+  employer         : "Sun Yat-sen University"
   location         : "Guangzhou, China"
 
 
