--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ url                      : "https://wanghwlab.github.io"
 author:
   # Biographic information
   avatar           : "hongweiwang.jpg"
-  name             : "Hongwei Wang"
+  name             : "Dr.Wang Research Group"
   bio              : "Principal Investigator"
   employer         : "Zhongshan Ophthalmic Center"
   location         : "Guangzhou, China"
